# ffb_tester

./: .gitignore  CMakeLists.txt  LICENSE  setup-win32.py
common/: inet_states.h
modules/: FindSDL2.cmake  FindSDL2_net.cmake
sender/: Client.cpp  Client.hpp  common.hpp  effect_set.cpp  effect_set.hpp  main.cpp  ostream_SDL.hpp
sniffer/: Server.cpp  Server.hpp  Sniffer.cpp  Sniffer.h  main.cpp
src/: common.hpp  effect_set.cpp  effect_set.hpp  main.cpp
test/: spring1
tests/: constant0  damper0  friction0  friction1  inertia0  saw_down  saw_up  sine  sine1  sine_single  spring0  spring1
viewer/: index.html  main.js  styles.css
